--- a/solar-control-dev/rootfs/usr/bin/templates/configure_devices.html
+++ b/solar-control-dev/rootfs/usr/bin/templates/configure_devices.html
@@ -196,7 +196,7 @@
                 <div class="tab-content" id="offpeak-tab">
                     <h3>Off-Peak Charging Settings</h3>
                     <div class="form-group">
-                        <label for="min_daily_power">Minimum Daily Power Required (Wh): <span class="tooltip">ⓘ<span class="tooltiptext">The minimum amount of energy the device needs to receive each day. In future patches the system will use this to run the device off-peak if not completed.</span></span></label>
+                        <label for="min_daily_power">Minimum Daily Power Required (kWh): <span class="tooltip">ⓘ<span class="tooltiptext">The minimum amount of energy the device needs to receive each day. In future patches the system will use this to run the device off-peak if not completed.</span></span></label>
                         <input type="number" id="min_daily_power" name="min_daily_power" min="0" step="0.1">
                     </div>
 
