--- a/solar-control-dev/rootfs/usr/bin/templates/base.html
+++ b/solar-control-dev/rootfs/usr/bin/templates/base.html
@@ -156,7 +156,7 @@
     <div class="overlay" id="overlay"></div>
     <div class="nav-drawer" id="navDrawer">
         <div class="nav-drawer-content">
-            <a href="{{ url_for('index') }}">Dashboard</a>
+            <a href="{{ url_for('root') }}">Dashboard</a>
             <a href="{{ url_for('configure_grid') }}">Configure Grid</a>
             <a href="{{ url_for('configure_battery') }}">Configure Battery</a>
             <a href="{{ url_for('configure_devices') }}">Configure Devices</a>
